--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,36 +4,108 @@ plugins {
 
 android {
     namespace 'com.snyck.asistenciaelectronica'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.snyck.asistenciaelectronica"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            getProps('env-release.properties').each { prop ->
+                buildConfigField("String", prop.key, prop.value)
+            }
+        }
+
+        debug {
+            getProps('env-debug.properties').each { prop ->
+                buildConfigField("String", prop.key, prop.value)
+            }
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        buildConfig = true
+        dataBinding = true
+        viewBinding true
+    }
+}
+
+def getProps(path) {
+    def props = new Properties()
+    props.load(new FileInputStream(rootProject.file(path)))
+    return props
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+    //Base------------------------------------------------------------------------------------------
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+
+    //Google FireBase ------------------------------------------------------------------------------
+    implementation 'com.google.firebase:firebase-analytics:20.0.2'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'com.google.firebase:firebase-config:21.0.1'
+    implementation 'com.google.firebase:firebase-core:20.0.2'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    implementation("com.google.android.gms:play-services-location:21.0.1")
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
+
+    // RxJava --------------------------------------------------------------------------------------
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    // Gson ----------------------------------------------------------------------------------------
+    api 'com.google.code.gson:gson:2.8.6'
+
+    // Retrofit ------------------------------------------------------------------------------------
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.google.code.gson:gson:2.6.2'
+
+    //Material Design
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //JWTDecode.Android ----------------------------------------------------------------------------
+    implementation 'com.auth0.android:jwtdecode:2.0.2'
+
+    // 3rd Party -----------------------------------------------------------------------------------
+    //implementation 'com.gemalto.wsq:wsq-android:1.2'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.9'
+
+    api project(path: ':uareulibrary')                               //FingerLibrary
+
+    implementation 'androidx.work:work-runtime-ktx:2.8.0-alpha01'
+
+
 }
