--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.snyck.asistenciaelectronica'
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.snyck.asistenciaelectronica"
         minSdk 26
-        targetSdk 34
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -102,10 +102,13 @@ dependencies {
     //implementation 'com.gemalto.wsq:wsq-android:1.2'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.9'
+    implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
+    implementation 'androidx.work:work-runtime-ktx:2.8.0-alpha01'
 
+    // Implementation project ----------------------------------------------------------------------
     api project(path: ':uareulibrary')                               //FingerLibrary
 
-    implementation 'androidx.work:work-runtime-ktx:2.8.0-alpha01'
+
 
 
 }
